@@ -91,6 +91,7 @@ interface
   active conflict set
 - the resolve propagation methods for the constraint handler and propagator getting a new parameter called relaxedbd;
   explaining/resolving this relaxed bound is sufficient
+- new method SCIPbranchVarHole() which branches a variable w.r.t. a given domain hole
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
